--- a/src/train_model.ipynb
+++ b/src/train_model.ipynb
@@ -10,12 +10,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-18 19:12:42.435868: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-11-18 19:12:42.436266: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-11-18 19:12:42.481905: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-11-19 17:28:06.739126: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-11-19 17:28:06.739472: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-11-19 17:28:06.786346: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-11-18 19:12:44.864123: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-11-18 19:12:44.864781: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n"
+      "2025-11-19 17:28:09.525246: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-11-19 17:28:09.525962: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d8ebf931",
    "metadata": {},
    "outputs": [
@@ -43,8 +43,8 @@
    ],
    "source": [
     "data_gen = ImageDataGenerator(rescale=1./255)\n",
-    "trdata = data_gen.flow_from_directory('../data/processed/train/', target_size=(224, 224), batch_size= 32 ,class_mode='sparse', shuffle=True)\n",
-    "tsdata = data_gen.flow_from_directory('../data/processed/test/', target_size=(224, 224),batch_size= 32 ,class_mode='sparse')"
+    "trdata = data_gen.flow_from_directory('../data/processed/train/', target_size=(200, 200), batch_size= 4 ,class_mode='sparse', shuffle=True)\n",
+    "tsdata = data_gen.flow_from_directory('../data/processed/test/', target_size=(200, 200),batch_size= 4 ,class_mode='sparse')"
    ]
   },
   {
@@ -59,13 +59,13 @@
      "text": [
       "/workspaces/iagorivadulla-Image-Classification/.venv/lib/python3.11/site-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
       "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
-      "2025-11-18 19:12:45.790327: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
+      "2025-11-19 17:28:10.403242: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
      ]
     }
    ],
    "source": [
     "model = Sequential()\n",
-    "model.add(Conv2D(input_shape = (224,224,3), filters = 64, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
+    "model.add(Conv2D(input_shape = (200,200,3), filters = 64, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
     "model.add(Conv2D(filters = 64,kernel_size = (3,3),padding = \"same\", activation = \"relu\"))\n",
     "model.add(MaxPool2D(pool_size = (2,2),strides = (2,2)))\n",
     "model.add(Conv2D(filters = 128, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c85274ba",
    "metadata": {},
    "outputs": [
@@ -99,26 +99,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class index: {'cats': 0, 'dogs': 1}\n",
-      "Samples train: 22224 batch_size: 32\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mEl kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. \n",
-      "\u001b[1;31mRevise el código de las celdas para identificar una posible causa del error. \n",
-      "\u001b[1;31mHaga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. \n",
-      "\u001b[1;31mVea Jupyter <a href='command:jupyter.viewOutput'>log</a> para obtener más detalles."
+      "{'cats': 0, 'dogs': 1}\n",
+      "22224\n",
+      "4\n"
      ]
     }
    ],
    "source": [
     "model.compile(optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])\n",
-    "print(\"Class index:\", trdata.class_indices)\n",
-    "print(\"Samples train:\", trdata.samples, \"batch_size:\", trdata.batch_size)"
+    "print(trdata.class_indices)\n",
+    "print(trdata.samples)\n",
+    "print(trdata.batch_size)"
    ]
   },
   {
@@ -131,7 +122,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n"
+      "Epoch 1/5\n",
+      "\u001b[1m1874/5556\u001b[0m \u001b[32m━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━\u001b[0m \u001b[1m3:01:11\u001b[0m 3s/step - accuracy: 0.5006 - loss: 0.7973"
      ]
     }
    ],
