--- a/src/train_model.ipynb
+++ b/src/train_model.ipynb
@@ -5,30 +5,44 @@
    "execution_count": 1,
    "id": "da5c2cd0",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPool2D, Dense, Flatten, Dropout, BatchNormalization\n",
+    "from tensorflow.keras.losses import SparseCategoricalCrossentropy\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2d6f4932-4f7e-49f7-a7f8-a9dbc54cd57c",
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-11-19 17:28:06.739126: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-11-19 17:28:06.739472: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-11-19 17:28:06.786346: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-11-19 17:28:09.525246: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-11-19 17:28:09.525962: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n"
+      "TensorFlow version: 2.10.0\n",
+      "Keras version: 2.10.0\n",
+      "GPUs: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU'), PhysicalDevice(name='/physical_device:GPU:1', device_type='GPU')]\n"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPool2D, Dense, Flatten\n"
+    "from tensorflow import keras\n",
+    "\n",
+    "print(\"TensorFlow version:\", tf.__version__)\n",
+    "print(\"Keras version:\", keras.__version__)\n",
+    "print(\"GPUs:\", tf.config.list_physical_devices('GPU'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d8ebf931",
    "metadata": {},
    "outputs": [
@@ -42,56 +56,67 @@
     }
    ],
    "source": [
-    "data_gen = ImageDataGenerator(rescale=1./255)\n",
-    "trdata = data_gen.flow_from_directory('../data/processed/train/', target_size=(200, 200), batch_size= 4 ,class_mode='sparse', shuffle=True)\n",
-    "tsdata = data_gen.flow_from_directory('../data/processed/test/', target_size=(200, 200),batch_size= 4 ,class_mode='sparse')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6c34d4e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/workspaces/iagorivadulla-Image-Classification/.venv/lib/python3.11/site-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
-      "2025-11-19 17:28:10.403242: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = Sequential()\n",
-    "model.add(Conv2D(input_shape = (200,200,3), filters = 64, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(Conv2D(filters = 64,kernel_size = (3,3),padding = \"same\", activation = \"relu\"))\n",
-    "model.add(MaxPool2D(pool_size = (2,2),strides = (2,2)))\n",
-    "model.add(Conv2D(filters = 128, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(Conv2D(filters = 128, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(MaxPool2D(pool_size = (2,2),strides = (2,2)))\n",
-    "model.add(Conv2D(filters = 256, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(Conv2D(filters = 256, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(Conv2D(filters = 256, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(MaxPool2D(pool_size = (2,2),strides = (2,2)))\n",
-    "model.add(Conv2D(filters = 512, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(Conv2D(filters = 512, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(Conv2D(filters = 512, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(MaxPool2D(pool_size = (2,2),strides = (2,2)))\n",
-    "model.add(Conv2D(filters = 512, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(Conv2D(filters = 512, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(Conv2D(filters = 512, kernel_size = (3,3), padding = \"same\", activation = \"relu\"))\n",
-    "model.add(MaxPool2D(pool_size = (2,2),strides = (2,2)))\n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(units = 4096,activation = \"relu\"))\n",
-    "model.add(Dense(units = 4096,activation = \"relu\"))\n",
-    "model.add(Dense(units = 2, activation = \"softmax\"))"
+    "data_gen = ImageDataGenerator( rescale=1./255)\n",
+    "trdata = data_gen.flow_from_directory('../data/processed/train/', target_size=(200, 200), class_mode='sparse', shuffle=True)\n",
+    "tsdata = data_gen.flow_from_directory('../data/processed/test/', target_size=(200, 200), class_mode='sparse')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "6c34d4e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "\n",
+    "model.add(Conv2D(64, (3,3), padding=\"same\", activation=\"relu\", input_shape=(200,200,3)))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Conv2D(64, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(MaxPool2D((2,2)))\n",
+    "\n",
+    "model.add(Conv2D(128, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Conv2D(128, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(MaxPool2D((2,2)))\n",
+    "\n",
+    "model.add(Conv2D(256, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Conv2D(256, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Conv2D(256, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(MaxPool2D((2,2)))\n",
+    "\n",
+    "model.add(Conv2D(512, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Conv2D(512, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Conv2D(512, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(MaxPool2D((2,2)))\n",
+    "\n",
+    "model.add(Conv2D(512, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Conv2D(512, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Conv2D(512, (3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(MaxPool2D((2,2)))\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(4096, activation=\"relu\"))\n",
+    "model.add(Dropout(0.5))              \n",
+    "model.add(Dense(4096, activation=\"relu\"))\n",
+    "model.add(Dropout(0.5))              \n",
+    "model.add(Dense(2, activation=\"softmax\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "c85274ba",
    "metadata": {},
    "outputs": [
@@ -99,22 +124,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cats': 0, 'dogs': 1}\n",
-      "22224\n",
-      "4\n"
+      "Class index: {'cats': 0, 'dogs': 1}\n",
+      "Samples train: 22224 batch_size: 32\n"
      ]
     }
    ],
    "source": [
-    "model.compile(optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])\n",
-    "print(trdata.class_indices)\n",
-    "print(trdata.samples)\n",
-    "print(trdata.batch_size)"
+    "model.compile(optimizer=\"adam\", loss= SparseCategoricalCrossentropy(from_logits = False), metrics=[\"accuracy\"])\n",
+    "print(\"Class index:\", trdata.class_indices)\n",
+    "print(\"Samples train:\", trdata.samples, \"batch_size:\", trdata.batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "cd500834-60a0-40b7-87aa-46a33bcb5911",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop = EarlyStopping(monitor= 'val_loss', patience= 5, restore_best_weights= True)\n",
+    "reduce = ReduceLROnPlateau(monitor= 'val_loss', factor= 0.3, patience= 3)\n",
+    "chp = ModelCheckpoint(\"../models/best_model.h5\", monitor=\"val_accuracy\", save_best_only=True, mode=\"max\", verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "33a1d69b",
    "metadata": {},
    "outputs": [
@@ -122,19 +157,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "\u001b[1m1874/5556\u001b[0m \u001b[32m━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━\u001b[0m \u001b[1m3:01:11\u001b[0m 3s/step - accuracy: 0.5006 - loss: 0.7973"
+      "Epoch 1/40\n",
+      "695/695 [==============================] - 293s 416ms/step - loss: 1.5911 - accuracy: 0.5419 - val_loss: 0.8226 - val_accuracy: 0.5317 - lr: 0.0010\n",
+      "Epoch 2/40\n",
+      "695/695 [==============================] - 299s 430ms/step - loss: 0.7108 - accuracy: 0.5687 - val_loss: 0.6782 - val_accuracy: 0.5987 - lr: 0.0010\n",
+      "Epoch 3/40\n",
+      "695/695 [==============================] - 300s 431ms/step - loss: 0.7135 - accuracy: 0.5638 - val_loss: 0.6627 - val_accuracy: 0.6308 - lr: 0.0010\n",
+      "Epoch 4/40\n",
+      "695/695 [==============================] - 300s 431ms/step - loss: 0.7194 - accuracy: 0.5579 - val_loss: 0.7097 - val_accuracy: 0.5213 - lr: 0.0010\n",
+      "Epoch 5/40\n",
+      "695/695 [==============================] - 301s 433ms/step - loss: 0.7210 - accuracy: 0.5451 - val_loss: 0.6911 - val_accuracy: 0.5375 - lr: 0.0010\n",
+      "Epoch 6/40\n",
+      "695/695 [==============================] - 299s 431ms/step - loss: 0.7069 - accuracy: 0.5173 - val_loss: 0.6937 - val_accuracy: 0.4939 - lr: 0.0010\n",
+      "Epoch 7/40\n",
+      "695/695 [==============================] - 300s 431ms/step - loss: 0.6738 - accuracy: 0.5757 - val_loss: 0.6181 - val_accuracy: 0.6556 - lr: 3.0000e-04\n",
+      "Epoch 8/40\n",
+      "695/695 [==============================] - 301s 433ms/step - loss: 0.6283 - accuracy: 0.6529 - val_loss: 0.5877 - val_accuracy: 0.6837 - lr: 3.0000e-04\n",
+      "Epoch 9/40\n",
+      "695/695 [==============================] - 300s 432ms/step - loss: 0.5700 - accuracy: 0.7104 - val_loss: 0.6166 - val_accuracy: 0.6632 - lr: 3.0000e-04\n",
+      "Epoch 10/40\n",
+      "695/695 [==============================] - 300s 432ms/step - loss: 0.5270 - accuracy: 0.7434 - val_loss: 0.4794 - val_accuracy: 0.7684 - lr: 3.0000e-04\n",
+      "Epoch 11/40\n",
+      "695/695 [==============================] - 300s 431ms/step - loss: 0.4781 - accuracy: 0.7809 - val_loss: 0.6825 - val_accuracy: 0.6308 - lr: 3.0000e-04\n",
+      "Epoch 12/40\n",
+      "695/695 [==============================] - 300s 431ms/step - loss: 0.4233 - accuracy: 0.8168 - val_loss: 0.4517 - val_accuracy: 0.7828 - lr: 3.0000e-04\n",
+      "Epoch 13/40\n",
+      "695/695 [==============================] - 298s 428ms/step - loss: 0.3669 - accuracy: 0.8457 - val_loss: 0.3350 - val_accuracy: 0.8700 - lr: 3.0000e-04\n",
+      "Epoch 14/40\n",
+      "695/695 [==============================] - 305s 438ms/step - loss: 0.3142 - accuracy: 0.8730 - val_loss: 0.3649 - val_accuracy: 0.8624 - lr: 3.0000e-04\n",
+      "Epoch 15/40\n",
+      "695/695 [==============================] - 304s 437ms/step - loss: 0.2481 - accuracy: 0.9008 - val_loss: 0.2780 - val_accuracy: 0.8808 - lr: 3.0000e-04\n",
+      "Epoch 16/40\n",
+      "695/695 [==============================] - 301s 433ms/step - loss: 0.2170 - accuracy: 0.9140 - val_loss: 0.1976 - val_accuracy: 0.9229 - lr: 3.0000e-04\n",
+      "Epoch 17/40\n",
+      "695/695 [==============================] - 300s 432ms/step - loss: 0.1852 - accuracy: 0.9254 - val_loss: 0.2293 - val_accuracy: 0.9164 - lr: 3.0000e-04\n",
+      "Epoch 18/40\n",
+      "695/695 [==============================] - 301s 432ms/step - loss: 0.1690 - accuracy: 0.9347 - val_loss: 0.3546 - val_accuracy: 0.8613 - lr: 3.0000e-04\n",
+      "Epoch 19/40\n",
+      "695/695 [==============================] - 341s 490ms/step - loss: 0.1478 - accuracy: 0.9421 - val_loss: 0.2384 - val_accuracy: 0.9204 - lr: 3.0000e-04\n",
+      "Epoch 20/40\n",
+      "695/695 [==============================] - 300s 432ms/step - loss: 0.0887 - accuracy: 0.9649 - val_loss: 0.1503 - val_accuracy: 0.9470 - lr: 9.0000e-05\n",
+      "Epoch 21/40\n",
+      "695/695 [==============================] - 299s 431ms/step - loss: 0.0685 - accuracy: 0.9736 - val_loss: 0.1518 - val_accuracy: 0.9449 - lr: 9.0000e-05\n",
+      "Epoch 22/40\n",
+      "695/695 [==============================] - 300s 432ms/step - loss: 0.0593 - accuracy: 0.9766 - val_loss: 0.1787 - val_accuracy: 0.9406 - lr: 9.0000e-05\n",
+      "Epoch 23/40\n",
+      "695/695 [==============================] - 300s 432ms/step - loss: 0.0463 - accuracy: 0.9808 - val_loss: 0.1908 - val_accuracy: 0.9420 - lr: 9.0000e-05\n",
+      "Epoch 24/40\n",
+      "695/695 [==============================] - 301s 433ms/step - loss: 0.0324 - accuracy: 0.9879 - val_loss: 0.1982 - val_accuracy: 0.9524 - lr: 2.7000e-05\n",
+      "Epoch 25/40\n",
+      "695/695 [==============================] - 303s 436ms/step - loss: 0.0234 - accuracy: 0.9911 - val_loss: 0.2230 - val_accuracy: 0.9521 - lr: 2.7000e-05\n"
      ]
     }
    ],
    "source": [
-    "model.fit(trdata, validation_data= tsdata, epochs= 5)"
+    "hst = model.fit(trdata, validation_data= tsdata, epochs= 40, callbacks=[stop, reduce, chp])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7a249402-f59b-4623-a421-631ed1df92aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save the model\n",
+    "\n",
+    "model.save('../models/model.h5')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cfe0dc5",
+   "id": "1101b9df-1d02-4e99-8e06-a5e826749e69",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -142,9 +237,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (TF-GPU)",
    "language": "python",
-   "name": "python3"
+   "name": "tf-gpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -156,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.25"
   }
  },
  "nbformat": 4,
